uses pop up framework

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,8 @@
   </head>
   <body class="overflow-x-hidden scrollbar-thumb-orange-300 scrollbar-thumb-rounded-full dark:scrollbar-track-zinc-800 scrollbar-track-transparent overflow-y-hidden">
     <picture class="hidden">
-      <img src="./src/assets/snappSaber.webp">
-      <img src="./src/assets/mainLogo.webp">
+      <img className="hidden" src="./src/assets/snappSaber.webp">
+      <img className='hidden' src="./src/assets/mainLogo.webp">
     </picture>
     <div id="root" class="overflow-x-hidden"></div>
     <script type="module" src="/src/main.jsx"></script>
