--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,13 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snapp Labs</title>
   
-  <link rel="icon" type="image/png" href="/src/assets/theSnapp.png" />
-  
+  <link rel="icon" type="image/png" href="/theSnapp.png" />
   
 </head>
 <body class="overflow-x-hidden">
   <div id="root" class="overflow-x-hidden"></div>
-  <script type="module" src="/src/main.jsx"></script>
+
 
 </body>
 </html>
