--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
   
 </head>
 <body class="overflow-x-hidden">
+  <script type="module" src="/main.jsx"></script>
   <div id="root" class="overflow-x-hidden"></div>
 
 
