--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Snapp Labs</title>
   
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="frontend/public/favicon.ico" />
 </head>
 <body class="overflow-x-hidden">
   <div id="root" class="overflow-x-hidden"></div>
