--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Snapp Labs</title>
   
   <link rel="icon" href="frontend/public/favicon.ico" />
 </head>
-<body class="overflow-x-hidden">
+<body class="overflow-x-hidden min-h-screen w-full overflow-y-auto bg-zinc-300 dark:bg-zinc-900 ">
   <div id="root" class="overflow-x-hidden"></div>
   
   <script type="module" src="/src/main.jsx"></script>
