--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Snapp Labs</title>
   
-  <link rel="icon" href="frontend/public/favicon.ico" />
+  <link rel="icon" href="/favicon.ico" />
 </head>
 <body class="overflow-x-hidden min-h-dvh w-full overflow-y-auto scrollbar-thin scroll scrollbar-thumb-amber-400 h-screen bg-zinc-300 dark:bg-zinc-800 ">
   <div id="root" class="overflow-x-hidden"></div>
