temporarily disabling cusom scrollbar

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
   
   <link rel="icon" href="/favicon.ico" />
 </head>
-<body class="overflow-x-hidden min-h-dvh w-full overflow-y-auto scrollbar-thin scroll scrollbar-thumb-amber-400 h-screen bg-zinc-300 dark:bg-zinc-800 ">
+<body class="overflow-x-hidden min-h-dvh w-full  h-screen bg-zinc-300 dark:bg-zinc-800 ">
   <div id="root" class="overflow-x-hidden"></div>
   
   <script type="module" src="/src/main.jsx"></script>
