preloading for fcp

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="overflow-x-hidden scrollbar min-h-dvh w-full  h-screen bg-zinc-300 dark:bg-zinc-800 ">
   <div id="root" class="overflow-x-hidden"></div>
-  
+  <link rel="prefetch" href="/assets/snappSaber.webp">
   <script type="module" src="/src/main.jsx"></script>
 
   <noscript>
